# benchsp

./: .gitignore  CMakeLists.txt  a.out  cusparse.cu  gendata.cpp  main.cpp  main_fp32.cpp  main_fp64.cpp  ref.cpp  smat.cu
bench/: blockinfo.cpp  spmmfp16.cpp  spmvfp16.cpp  spmvfp64.cpp
include/: amgT.h  bcsr.h  blas.h  common.h  csrspmv.h  cusp.h  dasp.h  dbsr.h  matrixFormat.hpp  ptx.h  ref.h  smat.h  spmv.h  utils.h
src/: amgT.cu  amgT_old.cu  bcsr.cu  blas.cu  csrspmv.cu  cusparse.cu  dasp.cu  ref.cpp  smat.cu  spmv.cu
utils/: utils.hpp
